--- a/views/main/create.jade
+++ b/views/main/create.jade
@@ -7,11 +7,11 @@ block bodyContent
 	section#mainContent
 		#termContainer
 			div(style="float:left;background:#FFF;")
-				.seasonIcon.activeTermIcon(data-gTTLbl="winter 2016 (available)" class="gTT-act")
+				.seasonIcon(data-termId="15" data-gTTLbl="winter 2016 (available)" class="gTT-act")
 					img(src="/images/snowflake.png" width="30px")
-				.seasonIcon(data-gTTLbl="summer 2016 (coming soon)" class="gTT-act")
+				.seasonIcon(data-termId="2" data-gTTLbl="summer 2016 (coming soon)" class="gTT-act")
 					img(src="/images/sun.png" width="30px")
-				.seasonIcon(data-gTTLbl="fall 2016 (coming later)" class="gTT-act")
+				.seasonIcon(data-termId="13" data-gTTLbl="fall 2016 (coming later)" class="gTT-act")
 					img(src="/images/leafIcon.png" width="30px")
 		#centerContainer
 			p#mainTitle Your Courses
