--- a/views/main/manage.jade
+++ b/views/main/manage.jade
@@ -1,32 +1,11 @@
 extends ../MainTemplate
 block headContent
-    style.
-        .box:hover{
-            background-color:rgba(0,0,0,0.05);
-            cursor:pointer;
-        }
-        .box:active{
-            box-shadow:0px 0px 20px #DDD inset;
-
-        }
+	link(rel="stylesheet" href="/css/manage.main.css")
 block bodyContent
-    
-    div(style="width:900px;position:absolute;top:100px;left:50%;margin-left:-450px;font-family:Open Sans;font-weight:100;font-size:14px;") Saved Schedules:
-    div(style="width:900px;margin-left:-450px;left:50%;position:absolute;top:150px;text-align:center;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;display:inline-block;border-top:0;border-left:0;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;display:inline-block;border-top:0;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;display:inline-block;border-top:0;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;display:inline-block;border-top:0;border-right:0;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;border-bottom:0;border-left:0;display:inline-block;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;border-bottom:0;display:inline-block;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;border-bottom:0;display:inline-block;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;border-bottom:0;border-right:0;display:inline-block;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;border-bottom:0;border-left:0;display:inline-block;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;border-bottom:0;display:inline-block;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;border-bottom:0;display:inline-block;")
-        div(class="box" style="height:200px;width:200px;border:1px solid #DDD;margin-left:-1px;margin-top:-5px;border-bottom:0;border-right:0;display:inline-block;")
-            
-            
-            
-script.
-        
+
+	div(id="m-large-name") Saved Schedules:
+	div(id="box-container")
+		
+
+
+	script(src="/js/manage.main.js")
