--- a/public/css/manage.main.css
+++ b/public/css/manage.main.css
@@ -17,12 +17,13 @@
 	text-align:center;
 }
 	.box{
-		height:200px;
+		height:auto;
 		width:200px;
 		border:1px solid #DDD;
 		margin-left:-1px;
-		margin-top:-4px;
+		margin-top:-1px;
 		display:inline-block;
+		position:relative;
 	}	
 	.box:hover{
 		background-color:rgba(0,0,0,0.05);
@@ -31,7 +32,15 @@
 	.box:active{
 		box-shadow:0px 0px 20px #DDD inset;
 	}
-
-
-.m-schedule-thumb{
-}
+		.m-schedule-thumb{
+			border-bottom:1px solid #DDD;
+		}
+		.box-title{
+			font-family:Open Sans;
+			font-size:13px;
+			font-weight:100;
+			margin-bottom:5px;
+		}
+		.box-toolBar{
+			width:100%;
+		}
