--- a/views/main/manage.jade
+++ b/views/main/manage.jade
@@ -5,7 +5,15 @@ block bodyContent
 
 	div(id="m-large-name") Saved Schedules:
 	div(id="box-container")
-		
+	div#main-loadingGear(style="height:100px;width:100px;background:url(/images/gears.gif) center center no-repeat;background-size:100px 100px;z-index:100000;position:absolute;top:50%;margin-top:-50px;left:50%;margin-left:-50px;padding:40px;")
+		p(style="position:absolute;bottom:0px;left:0px;font-family:Open Sans;font-size:12px;font-weight:100;text-align:center;width:100%;") This may take some time...
 
 
 	script(src="/js/manage.main.js")
+	
+	
+	div(class="box" id="boxPossibleTemplate")
+		div(style="position: absolute;top: 0px;left: 0px;/* height: 40px; */background: rgba(0,0,0,0.3);width: 100%;padding: 4px;box-sizing: border-box;")
+			div(style="height: 21px;width: 30px;background-color:#FFF;border-radius:20px;border: 1px solid rgba(0,0,0,0.3);float: left;margin-left: 3px;")
+			div(style="height: 21px;width: 30px;background-color:#FFF;border-radius:20px;border: 1px solid rgba(0,0,0,0.3);float: left;margin-left: 3px;")
+			div(style="height: 21px;width: 30px;background-color:#FFF;border-radius:20px;border: 1px solid rgba(0,0,0,0.3);float: left;margin-left: 3px;")
