--- a/views/main/manage.jade
+++ b/views/main/manage.jade
@@ -1,9 +1,11 @@
 extends ../MainTemplate
 block headContent
 	link(rel="stylesheet" href="/css/manage.main.css")
+	title Manager
 block bodyContent
 
-	div(id="m-large-name") Saved Schedules:
+	div(id="m-large-name") My Schedules
+		div(style="padding:10px;float:right;font-size:12px;border-radius:3px;background-color:#2c3e50;color:#FFF;cursor:pointer;") Import From myUFV
 	div(id="box-container")
 	div#main-loadingGear(style="height:100px;width:100px;background:url(/images/gears.gif) center center no-repeat;background-size:100px 100px;z-index:100000;position:absolute;top:50%;margin-top:-50px;left:50%;margin-left:-50px;padding:40px;")
 		p(style="position:absolute;bottom:0px;left:0px;font-family:Open Sans;font-size:12px;font-weight:100;text-align:center;width:100%;") This may take some time...
