--- a/views/MainTemplate.jade
+++ b/views/MainTemplate.jade
@@ -49,7 +49,7 @@ html
 												span(style="display:inline;padding:5px;margin-left:10px;float:right;") Course Directory
 								a(href="/info" title="My Info")
 										li.menuItems-listItem(style="padding-left:20px;") My Info
-						hr(style="width:100%;border:0;background-color:#EEE;")
+						hr(style="width:100%;border:0;height:0;border-top:1px solid #DDD;")
 						a(href="/u/logout" title="Logout")
 							li.menuItems-listItem(style="margin-top:5px;text-align:center;padding-left:20px;") Logout
 		script.
