--- a/public/css/create.main.css
+++ b/public/css/create.main.css
@@ -28,11 +28,13 @@ body{
 						margin-left:-300px;
 						left:50%;
 						padding:10px;
-						border:1px solid #AAA;
+						border:1px solid #DDD;
 						font-family:Open Sans;
 						outline:0;
 						font-weight:300;
 						font-size:13px;
+					z-index:100;
+					box-shadow: 0px 0px 3px #DDD;
 				}
 				#scheduleCreate{
 						padding:5px;
@@ -63,7 +65,8 @@ body{
 					position:relative;
 					left:100px;
 					width:620px;
-					border:1px solid #BBB;
+					border:1px solid #DDD;
+					box-shadow: 0px 0px 3px #DDD;
 					top:-1px;
 				}
 						.instant-resultContainer{
@@ -135,11 +138,12 @@ body{
 	width:42px;
 	padding:5px;
 	box-sizing:border-box;
-	border:1px solid #BBB;
+	border:1px solid #DDD;
 	float:left;
 	cursor:pointer;
 	margin-left:2px;
-	opacity:0.3
+	opacity:0.3;
+	box-shadow: 0px 0px 3px #DDD;
 }
 	.activeTermIcon{
 		opacity: 1;
