--- a/public/css/templateCSS.css
+++ b/public/css/templateCSS.css
@@ -77,6 +77,7 @@ body{
                     background-color:#FFF;
                     display:none;
                     z-index: 1000000000000000;
+									box-shadow: 0px 0px 3px #DDD;
                 }
                 #menuNub{
                     position:absolute;
