--- a/public/css/build.main.css
+++ b/public/css/build.main.css
@@ -57,11 +57,11 @@
     .b-scheduleWrap{
         width:704px;
         box-sizing:border-box;
-        border:1px solid #BBB;
+        border:1px solid #DDD;
+			box-shadow: 0px 0px 3px #DDD;
         display:inline-block;
         margin-top:10px;
         float:right;
-        border-radius: 3px;
     }
         .b-dayLabelWrap{
             display:inline-block;
@@ -76,7 +76,6 @@
                 padding-left:0px;
                 padding-right:0px;
                 font-size:12px;
-                border-left:1px solid #eee;
                 width:85px;
                 text-align:center;
             }
@@ -88,6 +87,7 @@
             border-top:0;
             border-right:0;
             display:inline-block;
+					background-position: -1px -1px;
         }
             .b-timeBlock{
                 overflow: hidden;
@@ -125,7 +125,7 @@
                 color:#000;
                 font-size:12px;
                 font-weight:100;
-                border-top:1px solid #DDD;
+                border-top:1px solid #f9f9f9;
                 left:0px;
                 padding:10px 2px 10px 2px;
                 box-sizing: border-box;
