--- a/views/home.jade
+++ b/views/home.jade
@@ -14,6 +14,8 @@ html
 				div(href="/contact" id="contactButton" style="color:#000;float:left;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Contact
 			a(href="/mission")
 				div(href="/mission" id="donateButton" style="color:#000;float:left;margin-left:40px;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Mission
+			a(href="/invite")
+				div(href="/invite" id="donateButton" style="color:#000;float:left;margin-left:40px;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Invite
 			div(href="/u/login" id="loginMain")
 				div(style="font-family:Open Sans;font-size:12px;font-weight:300;")
 					a(href="/u/login")
