Did the sort dropdown

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -1,5 +1,5 @@
 extends HomeTemplate
 block bodyContent
-	div(style="font-size:50px;font-weight:100;font-family:Raleway") Hi. I'm Joseph
+	div(style="font-size:50px;font-weight:100;font-family:Raleway") Hi. I'm Joseph.
 	br
 	div(style="width:400px;font-size:20px;font-weight:400;font-family:Raleway") I'm the creator of this thing. If you have any suggestions, questions, or inquiries, feel free to email me at josepht404@gmail.com .
