--- a/views/home.jade
+++ b/views/home.jade
@@ -10,10 +10,10 @@ html
 		title="Schedular.io"
 	body
 		div(style="width:1000px;position:relative;top:0px;left:50%;margin-left:-500px;margin-top:20px;font-family:Open Sans;font-size:12px;")
+			a(href="/")
+				div(href="/" id="contactButton" style="color:#000;float:left;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Home
 			a(href="/contact")
-				div(href="/contact" id="contactButton" style="color:#000;float:left;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Contact
-			a(href="/mission")
-				div(href="/mission" id="donateButton" style="color:#000;float:left;margin-left:40px;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Mission
+				div(href="/contact" id="donateButton" style="color:#000;float:left;margin-left:40px;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Contact
 			a(href="/invite")
 				div(href="/invite" id="donateButton" style="color:#000;float:left;margin-left:40px;font-family:Open Sans;font-weight:300;font-size:12px;margin-top:25px;cursor:pointer;") Invite
 			div(href="/u/login" id="loginMain")
@@ -25,7 +25,7 @@ html
 				img(src="/images/mainLogo.png" style="float:left" height="50px")
 				div(style="float:right;") Schedular
 			br
-			p(class="subTitle") a course planning platform for people
+			p(class="subTitle") a course planning platform for kind people
 			p(class="subTitle") now in UFV and SFU
 			a(href="/u/signup")
 				button(id="callToAction") Sign Me Up!
