--- a/public/css/userGlobal.css
+++ b/public/css/userGlobal.css
@@ -33,15 +33,19 @@
         
     }
         #u-signSubmit{
-            color:#FFF;
-            background-color:#3498db;
+            background-color:#FFF;
+            border:1px solid #3498db;
+            color:#3498db;
             cursor:pointer;
             padding:10px;
             width:80%;
             margin-left: 10%;
+						transition: background-color .25s;
         }
             #u-signSubmit:hover{
-                border-color:transparent;
+							background-color:#3498db;
+							color:#FFF;
+							transition: background-color .25s;
             }
             #u-signSubmit:active{
                 box-shadow: 0px 0px 10px #777 inset;
