--- a/views/main/show.jade
+++ b/views/main/show.jade
@@ -18,9 +18,9 @@ block bodyContent
 					label(style="font-weight:100") | 
 					label(style="font-weight:300;") Starting Time
 				div(id="sort-dropDownList")
-					div(class="sort-dropDownItem" data-value="Availability") Availability
-					div(class="sort-dropDownItem" data-value="Teacher Rating") Teacher Rating
-					div(class="sort-dropDownItem sort-dropDownItem-active" data-value="Starting Time") Starting Time
+					div(class="sort-dropDownItem material" data-value="Availability") Availability
+					div(class="sort-dropDownItem material" data-value="Teacher Rating") Teacher Rating
+					div(class="sort-dropDownItem sort-dropDownItem-active material" data-value="Starting Time") Starting Time
 			div(id="timeSort-wrap")
 				div(id="timeSort-upper")
 				div(id="timeSort-lower")
