Made a searcher object also a course drop down and rounded manage course things

--- a/views/main/manage.jade
+++ b/views/main/manage.jade
@@ -19,7 +19,7 @@ block bodyContent
 		div(class="box-infoContainer")
 			div(class="box-infoTitle") A Schedule
 			div(class="box-createTime") Thursday, Jan 12
-		span(class="box-actionContainer")
+		div(class="box-actionContainer")
 			div(class="box-actionTab" style="padding:0px 9px 0px 9px") Delete
 			div(class="box-actionTab") Edit
 			div(class="box-actionTab") Books
