--- a/public/css/manage.main.css
+++ b/public/css/manage.main.css
@@ -140,7 +140,8 @@
 					font-family:Open Sans;
 					font-size:12px;
 					font-weight:100;
-					max-width:200px;
+					max-width:202px;
+					float:left;
 				}
 					.box-actionTab{
 						border-right:1px solid #DDD;
@@ -150,6 +151,7 @@
 						height:30px;
 						box-sizing:border-box;
 						cursor: pointer;
+						margin:0;
 					}
 						.box-actionTab:hover{
 							box-shadow: 0px 0px 4px #DDD;
