--- a/views/main/show.jade
+++ b/views/main/show.jade
@@ -39,7 +39,7 @@ block bodyContent
 		br
 		br
 		br
-		div(id="lowerControls" style="float:right;overflow:hidden;display:none;width:100%;background-color:#fff;border-bottom:1px solid #f9f9f9;padding-top:20px;height:150px;box-shadow:0px 0px 4px #DDD;")
+		div.material(id="lowerControls" style="float:right;overflow:hidden;display:none;width:100%;background-color:#fff;padding-top:20px;height:150px;")
 			div(id="sliderControls" style="float:left;position:relative;padding-right:100px;")
 				div(id="toolTip" style="z-index:10000;top:0px;left:0px;display:none;padding:3px 5px 3px 5px;background:#34495e;float:left;position:absolute;color:#FFF;font-weight:300;font-family:Open Sans;font-size:11px;")
 					div(class="arrow-left")
