--- a/views/main/manage.jade
+++ b/views/main/manage.jade
@@ -5,12 +5,20 @@ block headContent
 block bodyContent
 
 	div(style="background:rgba(0,0,0,0.8);z-index:1000000;height:100%;width:100%;top:0px;left:0px;position:fixed;")
-		div.material(style="height:500px;width:1000px;background:#FFF;position:absolute;top:50%;left:50%;margin-top:-250px;margin-left:-500px;")
-			img(src="/images/myUFVScreen1.png" height="250px" style="float:left;margin-top:100px;margin-right:20px;margin-left:20px;")
-			div(style="background:#DDD;height:100%;width:1px;float:left;")
-			img(src="/images/myUFVScreen2.png" height="250px" style="float:left;margin-top:100px;margin-right:20px;margin-left:20px;")
-			div(style="background:#DDD;height:100%;width:1px;float:left;")
-			textarea(placeholder="paste it here!" style="font-family:Open Sans;font-size:12px;outline:0;resize:none;scroll:none;background:#DDD;border:0;height:200px;width:200px;margin-left:40px;box-sizing:border-box;padding:10px;border-radius:10px;margin-top:40px;")
+		div.material(style="height:400px;width:1000px;background:#FFF;position:absolute;top:50%;left:50%;margin-top:-250px;margin-left:-500px;")
+			div(style="float:left;width:350px;text-align:center;border-right:1px solid #DDD;height:100%;position:relative;")
+				div(style="font-size:15px;font-family:Open Sans;font-weight:300;margin-top:60px;width:100%;") Go to your "Add or Drop Classes Menu"
+				br
+				img(src="/images/myUFVScreen1.png" height="250px" style="position:absolute;top:100px;left:50%;margin-left:-125px;")
+			div(style="float:left;width:35s0px;text-align:center;height:100%;position:relative;")
+				div(style="font-size:15px;font-family:Open Sans;font-weight:300;margin-top:60px;margin-left:10%;width:80%;text-align:center;") Select and Copy everything (Ctrl+A and then Ctrl+C)
+				br
+				img(src="/images/myUFVScreen2.png" height="250px" style="position:absolute;top:100px;left:50%;margin-left:-125px;")
+			div(style="float:left;width:250px;text-align:center;border-left:1px solid #DDD;height:100%;position:relative;")
+				div(style="font-size:15px;font-family:Open Sans;font-weight:300;margin-top:60px;margin-left:10%;width:80%;text-align:center;") And paste it below
+				br
+				textarea(placeholder="paste it here!" style="font-family:Open Sans;font-size:12px;outline:0;resize:none;scroll:none;background:#DDD;border:0;height:200px;width:200px;margin-left:40px;box-sizing:border-box;padding:10px;border-radius:10px;margin-top:40px;")
+				
 	div(id="m-large-name") My Schedules
 		div(style="padding:10px;float:right;font-size:12px;border-radius:3px;background-color:#2c3e50;color:#FFF;cursor:pointer;") Import From myUFV
 	div(id="box-container")
