--- a/views/home.jade
+++ b/views/home.jade
@@ -6,6 +6,7 @@ html
 		link(href='https://fonts.googleapis.com/css?family=Raleway:400,100,300' rel='stylesheet')
 		link(href='https://fonts.googleapis.com/css?family=Open Sans:400,100,300' rel='stylesheet')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js')
+		meta(name="description" content="A course planning platform for kind people")
 		meta(name="viewport" content="width=device-width,height=device-height,initial-scale=1")
 		title="Schedular.io"
 	body
