--- a/views/main/build.jade
+++ b/views/main/build.jade
@@ -26,7 +26,7 @@ block bodyContent
 		input#instantInput.material(style="width:200px;color:#222;background:#EEE;border:0;padding:7px;outline:0;font-family:Open Sans;font-size:11px;margin-top:10px;" placeholder="Type to find more courses")
 		input.material(style="height:29px;width:29px;border:0;padding:0;float:left;margin-top:10px;background:url(/images/magnifyingGlass.png) #EEE center center no-repeat;background-size:60%;outline:0;" type="button" value="")
 		br
-		div.material(style="height:100px;width:239px;border-radius:0;margin-left:1px;border:1px solid #DDD;")
+		div#instantDrop.material(style="width:242px;border-radius:0;margin-left:1px;")
 		ul( id="crnBar" style="margin-top:-20px;float:left;padding-left:0;")
 	br
 	br
